@@ -3,6 +3,7 @@ TRUNK
   - [bugfix] Debug-level messages are logged in development mode
   - [bugfix] Running builder doesn't block the dashboard on Windows
   - [bugfix] Default layout should not be applied to XML output for CCTray 
+  - [bugfix] Test Failure Parser correctly parses failure messages from Mocha
 ------------------------------------------------------------------------------------------------------------------------
 * 0.4.0
   - pretty user interface
